<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Activity.MainActivity">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="90dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/Static_Name"
                    android:textColor="#dd3d00"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/textView5"
                    app:layout_constraintStart_toEndOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oAnde"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/search_background"
                    android:drawableStart="@drawable/search"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/searchMessage"
                    android:inputType="text"
                    android:paddingStart="20dp"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    tools:paddingStart="20dp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/Categories"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                    tools:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:paddingLeft="22dp"
                    android:paddingRight="22dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/Populer"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:paddingStart="22dp"
                    android:paddingEnd="22dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView13" />

                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:id="@+id/coordinatorLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerView2">

                    <com.google.android.material.bottomappbar.BottomAppBar
                        android:id="@+id/app_bar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:backgroundTint="#f6f6f6"
                        app:fabCradleMargin="8dp"
                        app:fabCradleRoundedCornerRadius="50dp"
                        app:fabCradleVerticalOffset="6dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <LinearLayout

                                android:id="@+id/homeBtn"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.2"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/imageViewHome"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    app:srcCompat="@drawable/btn1" />

                                <TextView
                                    android:id="@+id/HomeBtn"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/HomeIcon"
                                    android:textAlignment="center"
                                    android:textColor="#676767"
                                    android:textSize="12sp" />
                            </LinearLayout>

                            <LinearLayout

                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.2"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/imageViewprofile"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    app:srcCompat="@drawable/btn2" />

                                <TextView
                                    android:id="@+id/profileBtn"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/profileIcon"
                                    android:textAlignment="center"
                                    android:textColor="#676767"
                                    android:textSize="12sp" />
                            </LinearLayout>

                            <LinearLayout

                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.2"
                                android:orientation="vertical"
                                android:visibility="invisible">

                                <ImageView
                                    android:id="@+id/imageViewinv"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    app:srcCompat="@drawable/btn3" />

                                <TextView
                                    android:id="@+id/inv"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/HomeIcon"
                                    android:textAlignment="center"
                                    android:textColor="#676767"
                                    android:textSize="12sp" />
                            </LinearLayout>

                            <LinearLayout

                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.2"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/imageViewSupport"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    app:srcCompat="@drawable/btn3" />

                                <TextView
                                    android:id="@+id/supportBtn"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/SupportIcon"
                                    android:textAlignment="center"
                                    android:textColor="#676767"
                                    android:textSize="12sp" />
                            </LinearLayout>

                            <LinearLayout

                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.2"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/imageViewSettings"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    app:srcCompat="@drawable/btn4" />

                                <TextView
                                    android:id="@+id/settingsBtn"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/settingsIcon"
                                    android:textAlignment="center"
                                    android:textColor="#676767"
                                    android:textSize="12sp" />
                            </LinearLayout>
                        </LinearLayout>


                    </com.google.android.material.bottomappbar.BottomAppBar>
                </androidx.coordinatorlayout.widget.CoordinatorLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/orange_light_banner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextText">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0"
                        app:srcCompat="@drawable/image_banner" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/FreeDeliveryMessage"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/imageView3"
                        app:layout_constraintTop_toTopOf="@+id/imageView3" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/OfferDuration"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="normal|bold"
                        app:layout_constraintEnd_toEndOf="@+id/textView6"
                        app:layout_constraintStart_toStartOf="@+id/textView6"
                        app:layout_constraintTop_toBottomOf="@+id/textView6" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/orange_button"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/textView7"
                        app:layout_constraintStart_toStartOf="@+id/textView7"
                        app:layout_constraintTop_toBottomOf="@+id/textView7">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/MotivationMessage"
                            android:textColor="#ffffff"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/cartBtn"
                    android:layout_width="56dp"
                    android:layout_height="47dp"
                    android:layout_marginBottom="32dp"
                    android:backgroundTint="#ff5e00"
                    android:elevation="1dp"
                    android:src="@drawable/shopping_cart"
                    app:backgroundTint="#ff5e00"
                    app:layout_constraintBottom_toBottomOf="@+id/coordinatorLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:maxImageSize="30dp"
                    app:tint="#ffffff"
                    tools:ignore="MissingConstraints">

                </com.google.android.material.floatingactionbutton.FloatingActionButton>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>